# monorepo-golang

./: .gitignore  BUILD  Earthfile  LICENSE  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  magefile.go
.devcontainer/: devcontainer.json  docker-compose.yaml  install-dev-tools.sh
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: app-build.yaml  build-app.yaml  build-go-app.yaml  build.yaml  codeql-analysis.yaml  default.yaml  go.yaml  golangci-lint.yaml
.make/: app.mk  database.mk  docker.mk  help.mk  kubernetes.mk  test.mk
api-definition/: oapi-codengen-test.yaml  oapi-codengen.yaml  order_api.yaml  orders.yaml
app/: Dockerfile  app.go  config.yaml  go.mod  go.sum  main.go
app-golang/: go.mod  go.sum
app-golang/internal/: config.go
app-golang/internal/orders/: order_id_generator_test.go  order_item_repository.go
app-golang/serve/: swagger_ui.go
app-golang/serve/swagger-ui/: swagger-ui-es-bundle-core.js
app/adapter/order_api/: api.go  order_item_request.go  order_item_response.go  order_request.go
app/adapter/order_item_repo/: postgresql.go
app/adapter/order_repo/: postgresql.go
app/adapter/status_api/: status_api.go
app/api/: logger_middleware.go  response_handler.go  response_helper.go
app/api/order/: api.go  order_api.go  order_item_request.go  order_item_response.go  order_request.go  order_response.go  order_status.go  orders_api.go  orders_response.go  response_helper.go
app/api/orders/: order_item_request.go  order_item_response.go  order_request.go  order_response.go  order_responses.go  orders_api.go  orders_response.go  response_helper.go
app/api/responses/: response_handler.go
app/api/status/: health.go  prometheus.go  status_api.go
app/config/: database.go
app/core/port/: incoming.go  outgoing.go
app/core/service/: order.go
app/infastructure/: config.go  database.go
app/internal/: config.go  logger.go
app/internal/config/: config.go  environment.go  region.go
app/internal/errors/: error.go
app/internal/order/: order_entity.go  order_id.go  (+7 more)
app/serve/: swagger_ui.go
config/: config.eu-test.yaml  config.none-container.yaml  config.none-dev.yaml  none-dev.crt  none-dev.key
deployment-docker/: README.md  docker-compose.yaml
deployment-docker/app/: docker-compose.yaml
deployment-docker/prometheus/: prometheus.yaml
deployment-kubernetes/app/: app.deployment.yaml  app.service.yaml  kustomization.yaml
deployment-kubernetes/postgresql/: kustomization.yaml  postgresql.deployment.yaml  postgresql.service.yaml
go/: go.mod  go.sum
lambdas/: README.md  go.mod  go.sum
lambdas/facts/: README.md  samconfig.yaml  template.yaml
libraries/api-helper/: Earthfile  go.mod  response_helper.go
libraries/apputil/: go.mod
libraries/errors/: Earthfile  go.mod
libraries/testingutil/: config.go  config_test.go  database.go  go.mod
libraries/testutil/: config.go  config_test.go  database.go  http.go  serde.go
migration-database/: none-dev.properties
migration-database/migration/: V1__create_order_table.sql  V2.1__create_order_item_table.sql  V2__create_order_item_table.sql
migration-database/none-dev/: V100__create_order_test_data.sql  V101__create_order_item_test_data.sql
rust/: Cargo.toml
rust/services/order/app/: Cargo.toml
rust/services/order/app/src/: main.rs
rust/services/order/app/src/core/: mod.rs  order.rs  order_id.rs
rust/services/order/app/src/core/model/: order.rs
rust/services/order/app/src/core/port/: incoming.rs  outgoing.rs
rust/services/order/app/src/core/service/: mod.rs  order.rs  order_id.rs  order_id_test.rs
rust/services/order/app/src/incoming/: mod.rs
rust/services/order/app/src/incoming/openapi/: routes.rs
rust/services/order/app/src/incoming/openapi/swagger-ui/: swagger-initializer.js
rust/services/order/app/src/incoming/orderapi/: models.rs  routes.rs
rust/services/order/app/src/outgoing/: mod.rs  order.rs  postgres.rs
service/order/app/: BUILD.bazel  main.go
service/order/app/adapter/order_api/: BUILD.bazel  api.go  order_item_response.go  order_response.go  order_status.go  orders_response.go
service/order/app/adapter/order_item_repo/: BUILD.bazel  postgresql.go
service/order/app/adapter/order_repo/: BUILD.bazel  postgresql.go
service/order/app/adapter/status_api/: BUILD.bazel  status_api.go
service/order/app/api/: BUILD.bazel  logger_middleware.go  response_helper.go
service/order/app/config/: BUILD.bazel  config.go  region.go
service/order/app/core/entity/: BUILD.bazel
service/order/app/core/port/: BUILD.bazel  incoming.go  outgoing.go
service/order/app/core/service/: BUILD.bazel  order.go
service/order/app/infastructure/: BUILD.bazel  database.go
service/order/app/internal/errors/: BUILD.bazel
service/order/app/internal/order/: BUILD.bazel  order_id_generator.go  order_id_generator_test.go
service/order/app/internal/util/: BUILD.bazel
service/order/app/serve/: BUILD.bazel  swagger_ui.go
service/order/app/serve/openapi/: order_api.yaml
services/order/: Earthfile  Makefile  Taskfile.yaml
src/go/: go.mod  go.sum
src/rust/services/order/app/: Cargo.toml
src/rust/services/order/app/src/: main.rs
src/rust/services/order/app/src/core/: mod.rs  order.rs  order_id.rs  order_id_test.rs
src/rust/services/order/app/src/core/model/: order.rs
src/rust/services/order/app/src/core/port/: incoming.rs  outgoing.rs
src/rust/services/order/app/src/core/service/: mod.rs  order.rs  order_id.rs
src/rust/services/order/app/src/incoming/: mod.rs
src/rust/services/order/app/src/incoming/openapi/: routes.rs
src/rust/services/order/app/src/incoming/orderapi/: routes.rs
src/rust/services/order/app/src/outgoing/: memory.rs
test-integration/: go.mod  go.sum
test-integration/order/: order_api_test.go  orders_test.go
test-integration/order_api/: orderNotFoundResponse.json  order_api_test.go
test-integration/orders/: orderNotFoundResponse.json  ordersResponse.json  orders_test.go
test-smoke/: go.mod  go.sum  order_api_test.go
test-smoke/order/: orders_test.go
test-smoke/orders/: orders_test.go
(+348 files in other folders)
