load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "app_lib",
    srcs = ["main.go"],
    importpath = "monorepo/service/order/app",
    visibility = ["//visibility:private"],
    deps = [
        "//service/order/app/adapter/order_api",
        "//service/order/app/adapter/order_item_repo",
        "//service/order/app/adapter/order_repo",
        "//service/order/app/adapter/status_api",
        "//service/order/app/api",
        "//service/order/app/config",
        "//service/order/app/core/service",
        "//service/order/app/infastructure",
        "//service/order/app/internal/util",
        "//service/order/app/serve",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_julienschmidt_httprouter//:httprouter",
    ],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)
