[package]
name = "order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "6.4.2"
mime_guess = "2.0.4"
time = { version = "0.3.20", features = ["serde"] }
strum = "0.24.1"
strum_macros = "0.24.3"
base64 = "0.21.0"
md5 = "0.7.0"
test-case = "3.0.0"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "time",
    "postgres",
    "macros",
] }
rand = "0.8.5"
serde_json = "1.0.93"
serde = "1.0.152"
thiserror = "1.0.39"
axum = "0.6.11"
tokio = {version= "1.26.0", features = ["full"]}
async-trait = "0.1.66"
