load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "database.go",
        "environment.go",
        "region.go",
    ],
    importpath = "monorepo/service/order/app/config",
    visibility = ["//visibility:public"],
    deps = [
        "//service/order/app/internal/util",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)
