load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "infastructure",
    srcs = ["database.go"],
    importpath = "monorepo/service/order/app/infastructure",
    visibility = ["//visibility:public"],
    deps = [
        "//service/order/app/config",
        "//service/order/app/internal/util",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_lib_pq//:pq",
    ],
)
