load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "serve",
    srcs = ["swagger_ui.go"],
    embedsrcs = [
        "openapi/order_api.yaml",
        "swagger-ui/favicon-16x16.png",
        "swagger-ui/favicon-32x32.png",
        "swagger-ui/index.css",
        "swagger-ui/index.html",
        "swagger-ui/oauth2-redirect.html",
        "swagger-ui/swagger-initializer.js",
        "swagger-ui/swagger-ui-bundle.js",
        "swagger-ui/swagger-ui-bundle.js.map",
        "swagger-ui/swagger-ui-es-bundle-core.js",
        "swagger-ui/swagger-ui-es-bundle-core.js.map",
        "swagger-ui/swagger-ui-es-bundle.js",
        "swagger-ui/swagger-ui-es-bundle.js.map",
        "swagger-ui/swagger-ui-standalone-preset.js",
        "swagger-ui/swagger-ui-standalone-preset.js.map",
        "swagger-ui/swagger-ui.css",
        "swagger-ui/swagger-ui.css.map",
        "swagger-ui/swagger-ui.js",
        "swagger-ui/swagger-ui.js.map",
    ],
    importpath = "monorepo/service/order/app/serve",
    visibility = ["//visibility:public"],
    deps = [
        "//service/order/app/internal/util",
        "@com_github_julienschmidt_httprouter//:httprouter",
    ],
)
