load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "order_api",
    srcs = [
        "api.go",
        "order.gen.go",
        "order_item_response.go",
        "order_request.go",
        "order_response.go",
        "order_status.go",
        "orders_response.go",
    ],
    importpath = "monorepo/service/order/app/adapter/order_api",
    visibility = ["//visibility:public"],
    deps = [
        "//service/order/app/api",
        "//service/order/app/config",
        "//service/order/app/core/entity",
        "//service/order/app/core/port",
        "//service/order/app/internal/errors",
        "//service/order/app/internal/util",
        "@com_github_julienschmidt_httprouter//:httprouter",
    ],
)
