load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "status_api",
    srcs = ["status_api.go"],
    importpath = "monorepo/service/order/app/adapter/status_api",
    visibility = ["//visibility:public"],
    deps = [
        "//service/order/app/config",
        "//service/order/app/internal/util",
        "@com_github_hellofresh_health_go_v4//:health-go",
        "@com_github_hellofresh_health_go_v4//checks/postgres",
        "@com_github_jmoiron_sqlx//:sqlx",
        "@com_github_julienschmidt_httprouter//:httprouter",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)
