load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "port",
    srcs = [
        "incoming.go",
        "outgoing.go",
    ],
    importpath = "monorepo/service/order/app/core/port",
    visibility = ["//visibility:public"],
    deps = ["//service/order/app/core/entity"],
)
