load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "order",
    srcs = ["order_id_generator.go"],
    importpath = "monorepo/service/order/app/internal/order",
    visibility = ["//service/order/app:__subpackages__"],
    deps = [
        "//service/order/app/config",
        "//service/order/app/core/entity",
    ],
)

go_test(
    name = "order_test",
    srcs = ["order_id_generator_test.go"],
    deps = [
        ":order",
        "//service/order/app/config",
        "//service/order/app/core/entity",
        "@com_github_stretchr_testify//assert",
    ],
)
