[package]
name = "order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed="6.4.2"
actix-files = "0.6.2"
actix-web = "4"
mime_guess = "2.0.4"
time = "0.3.20"
strum_macros = "0.24.3"
base64 = "0.21.0"
md5 = "0.7.0"
test-case = "3.0.0"
